[workspace]
members = [
    "crates/exp",
    "crates/copy_fail_guard",
    "crates/copy_fail_guard_kprobe",
]
exclude = [
    "crates/copy_fail_guard-ebpf",
    "crates/copy_fail_guard_kprobe-ebpf",
]
resolver = "3"

# eBPF crates (copy_fail_guard-ebpf, copy_fail_guard_kprobe-ebpf) are NOT
# workspace members. They target bpfel-unknown-none and must be compiled
# separately with bpf-linker.
