[package]
name = "copy_fail_guard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13.1"
aya-log = "0.2.1"
anyhow = "1"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
